--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
+    compile 'io.netty:netty-all:5.0.0.Alpha2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
